--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.6",
+        "bootstrap": "^5.2.3",
+        "i": "^0.3.7",
+        "npm": "^9.3.1"
     }
 }
