--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.6",
         "bootstrap": "^5.2.3",
+        "bootstrap-icons": "^1.10.3",
         "i": "^0.3.7",
         "npm": "^9.3.1"
     }
