--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
         "@babel/preset-env": "^7.16.0",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
+        "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
         "@symfony/webpack-encore": "^4.0.0",
         "core-js": "^3.23.0",
+        "react": "^18.0",
+        "react-dom": "^18.0",
         "regenerator-runtime": "^0.13.9",
+        "sass": "^1.58.0",
+        "sass-loader": "^13.2.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
@@ -24,6 +29,7 @@
         "bootstrap": "^5.2.3",
         "bootstrap-icons": "^1.10.3",
         "i": "^0.3.7",
-        "npm": "^9.3.1"
+        "npm": "^9.3.1",
+        "react-bootstrap": "^2.7.0"
     }
 }
